--- a/index.html
+++ b/index.html
@@ -10,7 +10,21 @@
 </head>
 <body>
     <!-- header  -->
-    <header></header>
+    <header>
+        <div class="container-lg">
+            <div class="row">
+                <div class="col">Titolo</div>
+                <div class="col d-md-none d-flex justify-content-end">Menu</div>
+                <div class="col d-none d-md-block">
+                    <div class="row">
+                        <div class="col d-flex justify-content-end">menu</div>
+                        <div class="col d-flex justify-content-end">menu</div>
+                        <div class="col d-flex justify-content-end">menu</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
     <!-- / header  -->
     <!-- main  -->
     <main></main>
