--- a/index.html
+++ b/index.html
@@ -27,7 +27,41 @@
     </header>
     <!-- / header  -->
     <!-- main  -->
-    <main></main>
+    <main>
+        <section class="odd_section section_one">
+            <div class="container-lg">
+                <div class="row">
+                    <div class="col-12 d-flex justify-content-center">
+                        <div class="img_debug"></div>
+                    </div>
+                    <div class="col-12 d-flex justify-content-center">
+                        <h1>START BOOTSTRAP</h1>
+                    </div>
+                    <div class="col-12 d-flex justify-content-center">
+                        <span>linea</span>
+                        <span>stella</span>
+                        <span>linea</span>
+                    </div>
+                    <div class="col-12 d-flex justify-content-center">
+                        <h5>GRAPHIC ARTIS - WEB DESIGNER - ILLUSTRATOR</h5>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="container-lg">
+                <div class="row">
+                    <div class="col"></div>
+                    <div class="col"></div>
+                    <div class="col"></div>
+                    <div class="col"></div>
+                    <div class="col"></div>
+                    <div class="col"></div>
+                    <div class="col"></div>
+                </div>
+            </div>
+        </section>
+    </main>
     <!-- / main  -->
     <!-- footer  -->
     <footer></footer>
