--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <div class="container-lg">
             <div class="row">
                 <div class="col">Titolo</div>
-                <div class="col d-md-none d-flex justify-content-end">Menu</div>
-                <div class="col d-none d-md-block">
+                <div class="col d-sm-none d-flex justify-content-end">Menu</div>
+                <div class="col d-none d-sm-block">
                     <div class="row">
                         <div class="col d-flex justify-content-end">menu</div>
                         <div class="col d-flex justify-content-end">menu</div>
@@ -51,13 +51,24 @@
         <section>
             <div class="container-lg">
                 <div class="row">
-                    <div class="col"></div>
-                    <div class="col"></div>
-                    <div class="col"></div>
-                    <div class="col"></div>
-                    <div class="col"></div>
-                    <div class="col"></div>
-                    <div class="col"></div>
+                    <div class="col-12">
+                        <div class="row">
+                            <div class="col-12 d-flex justify-content-center">
+                                <h3>PORTFOLIO</h3>
+                            </div>
+                            <div class="col-12 d-flex justify-content-center">
+                                <span>linea</span>
+                                <span>stella</span>
+                                <span>linea</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-sm-6 col-xl-4">img</div>
+                    <div class="col-12 col-sm-6 col-xl-4">img</div>
+                    <div class="col-12 col-sm-6 col-xl-4">img</div>
+                    <div class="col-12 col-sm-6 col-xl-4">img</div>
+                    <div class="col-12 col-sm-6 col-xl-4">img</div>
+                    <div class="col-12 col-sm-6 col-xl-4">img</div>
                 </div>
             </div>
         </section>
