--- a/index.html
+++ b/index.html
@@ -72,6 +72,48 @@
                 </div>
             </div>
         </section>
+        <section class="odd_section">
+            <div class="container-lg">
+                <div class="row">
+                    <div class="col-12 d-flex justify-content-center">
+                        <h3>ABOUT</h3>
+                    </div>
+                    <div class="col-12 d-flex justify-content-center">
+                        <span>linea</span>
+                        <span>stella</span>
+                        <span>linea</span>
+                    </div>
+                    <div class="row justify-content-center">
+                        <div class="col-10 col-sm-6 d-flex justify-content-center">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque quibusdam laudantium harum exercitationem. Odit alias sint in qui tenetur sequi, eum assumenda dolore ex aliquid tempore quasi dolores non provident!</p>
+                        </div>
+                        <div class="col-10 col-sm-6 d-flex justify-content-center">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque quibusdam laudantium harum exercitationem. Odit alias sint in qui tenetur sequi, eum assumenda dolore ex aliquid tempore quasi dolores non provident!</p>
+                        </div>
+                        <div class="col-10 d-flex justify-content-center">button</div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="container-lg">
+                <div class="row justify-content-center">
+                    <div class="col-12 d-flex justify-content-center">
+                        <h3>CONTACT ME</h3>
+                    </div>
+                    <div class="col-12 d-flex justify-content-center">
+                        <span>linea</span>
+                        <span>stella</span>
+                        <span>linea</span>
+                    </div>
+                    <div class="col-10">Name</div>
+                    <div class="col-10">Email</div>
+                    <div class="col-10">Phone</div>
+                    <div class="col-10">Message</div>
+                    <div class="col-10">button</div>
+                </div>
+            </div>
+        </section>
     </main>
     <!-- / main  -->
     <!-- footer  -->
