--- a/index.html
+++ b/index.html
@@ -117,7 +117,34 @@
     </main>
     <!-- / main  -->
     <!-- footer  -->
-    <footer></footer>
+    <footer>
+        <div class="container-lg footer_top">
+            <div class="row">
+                <div class="col-12 col-sm-4">
+                    <h5 class="text-center">Location</h5>
+                    <p class="text-center">indirizzo</p>
+                </div>
+                <div class="col-12 col-sm-4">
+                    <h5 class="text-center">Around the web</h5>
+                    <p class="text-center">
+                        <span>f</span>
+                        <span>g</span>
+                        <span>t</span>
+                        <span>in</span>
+                    </p>
+                </div>
+                <div class="col-12 col-sm-4">
+                    <h5 class="text-center">about freelancer</h5>
+                    <p class="text-center">about freelancerabout freelancerabout freelancerabout freelancerabout freelancerabout freelancer</p>
+                </div>
+            </div>
+        </div>
+        <div class="container-lg footer_bottom d-flex align-items-center justify-content-center">
+            <div>
+                <small>copyright</small>
+            </div>
+        </div>
+    </footer>
     <!-- / footer  -->
 </body>
 </html>
