--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bootstrap Freelancer</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">    
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
@@ -13,13 +14,23 @@
     <header>
         <div class="container-lg">
             <div class="row">
-                <div class="col">Titolo</div>
-                <div class="col d-sm-none d-flex justify-content-end">Menu</div>
+                <div class="col ms_text-color ms_font-size20">START BOOTSTRAP</div>
+                <div class="col d-sm-none d-flex justify-content-end align-items-center">
+                    <i class="fa-solid fa-bars ms_bars-color ms_font-size14"></i>
+                </div>
                 <div class="col d-none d-sm-block">
                     <div class="row">
-                        <div class="col d-flex justify-content-end">menu</div>
-                        <div class="col d-flex justify-content-end">menu</div>
-                        <div class="col d-flex justify-content-end">menu</div>
+                        <ul>
+                            <li>
+                                <a class="ms_text-color ms_font-size14" href="#">PORTFOLIO</a>
+                            </li>
+                            <li>
+                                <a class="ms_text-color ms_font-size14" href="#">ABOUT</a>
+                            </li>
+                            <li>
+                                <a class="ms_text-color ms_font-size14" href="#">CONTACT</a>
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </div>
@@ -146,5 +157,6 @@
         </div>
     </footer>
     <!-- / footer  -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
 </html>
