--- a/index.html
+++ b/index.html
@@ -39,22 +39,26 @@
     <!-- / header  -->
     <!-- main  -->
     <main>
-        <section class="odd_section section_one">
+        <section class="ms_odd-section">
             <div class="container-lg">
-                <div class="row">
-                    <div class="col-12 d-flex justify-content-center">
-                        <div class="img_debug"></div>
+                <div class="row justify-content-center">
+                    <div class="col-10 d-flex justify-content-center pt-5">
+                        <img src="./img/avatar.svg" alt=" avatar">
                     </div>
-                    <div class="col-12 d-flex justify-content-center">
-                        <h1>START BOOTSTRAP</h1>
+                    <div class="col-10 d-flex justify-content-center">
+                        <h1 class="fw-bold">START BOOTSTRAP</h1>
                     </div>
-                    <div class="col-12 d-flex justify-content-center">
-                        <span>linea</span>
-                        <span>stella</span>
-                        <span>linea</span>
+                    <div class="col-4 d-flex justify-content-between align-items-center">
+                        <div class="ms_hr"></div>
+                        <div><i class="fa-solid fa-star"></i></div>
+                        <div class="ms_hr"></div>
                     </div>
-                    <div class="col-12 d-flex justify-content-center">
-                        <h5>GRAPHIC ARTIS - WEB DESIGNER - ILLUSTRATOR</h5>
+                    <div class="col-10 d-flex justify-content-center pt-2 pb-4">
+                        <ul>
+                            <li class=".ms_font-size14 fw-semibold">GRAPHIC ARTIST</li>
+                            <li class="ms_designer .ms_font-size14 fw-semibold">WEB DESIGNER</li>
+                            <li class=".ms_font-size14 fw-semibold">ILLUSTRATOR</li>
+                        </ul>
                     </div>
                 </div>
             </div>
