--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
                     <div class="col-10 d-flex justify-content-center">
                         <h1 class="fw-bold">START BOOTSTRAP</h1>
                     </div>
-                    <div class="col-4 d-flex justify-content-between align-items-center">
+                    <div class="col-5 d-flex justify-content-between align-items-center">
                         <div class="ms_hr"></div>
-                        <div><i class="fa-solid fa-star"></i></div>
+                        <div><i class="fa-solid fa-star ms_star"></i></div>
                         <div class="ms_hr"></div>
                     </div>
                     <div class="col-10 d-flex justify-content-center pt-2 pb-4">
@@ -63,27 +63,39 @@
                 </div>
             </div>
         </section>
-        <section>
+        <section id="portfolio">
             <div class="container-lg">
                 <div class="row">
                     <div class="col-12">
-                        <div class="row">
+                        <div class="row justify-content-center">
                             <div class="col-12 d-flex justify-content-center">
-                                <h3>PORTFOLIO</h3>
+                                <h3 class="fw-semibold">PORTFOLIO</h3>
                             </div>
-                            <div class="col-12 d-flex justify-content-center">
-                                <span>linea</span>
-                                <span>stella</span>
-                                <span>linea</span>
+                            <div class="col-5 d-flex justify-content-between align-items-center">
+                                <div class="ms_hr-2"></div>
+                                <div><i class="fa-solid fa-star ms_star"></i></div>
+                                <div class="ms_hr-2"></div> 
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-sm-6 col-xl-4">img</div>
-                    <div class="col-12 col-sm-6 col-xl-4">img</div>
-                    <div class="col-12 col-sm-6 col-xl-4">img</div>
-                    <div class="col-12 col-sm-6 col-xl-4">img</div>
-                    <div class="col-12 col-sm-6 col-xl-4">img</div>
-                    <div class="col-12 col-sm-6 col-xl-4">img</div>
+                    <div class="col-12 col-sm-6 col-xl-4">
+                        <img class="img-fluid rounded" src="./img/cabin.png" alt="casa">
+                    </div>
+                    <div class="col-12 col-sm-6 col-xl-4">
+                        <img class="img-fluid rounded" src="./img/cake.png" alt="dolce">
+                    </div>
+                    <div class="col-12 col-sm-6 col-xl-4">
+                        <img class="img-fluid rounded" src="./img/circus.png" alt="circo">
+                    </div>
+                    <div class="col-12 col-sm-6 col-xl-4">
+                        <img class="img-fluid rounded" src="./img/game.png" alt="joypad">
+                    </div>
+                    <div class="col-12 col-sm-6 col-xl-4">
+                        <img class="img-fluid rounded" src="./img/safe.png" alt="cassaforte">
+                    </div>
+                    <div class="col-12 col-sm-6 col-xl-4">
+                        <img class="img-fluid rounded" src="./img/submarine.png" alt="sottomarino">
+                    </div>
                 </div>
             </div>
         </section>
