--- a/index.html
+++ b/index.html
@@ -64,80 +64,88 @@
             </div>
         </section>
         <section id="portfolio">
-            <div class="container-lg">
+            <div class="container-lg mb-3">
                 <div class="row">
                     <div class="col-12">
                         <div class="row justify-content-center">
-                            <div class="col-12 d-flex justify-content-center">
+                            <div class="col-12 d-flex justify-content-center mt-5 mb-3">
                                 <h3 class="fw-semibold">PORTFOLIO</h3>
                             </div>
-                            <div class="col-5 d-flex justify-content-between align-items-center">
+                            <div class="col-5 d-flex justify-content-between align-items-center mb-3">
                                 <div class="ms_hr-2"></div>
                                 <div><i class="fa-solid fa-star ms_star"></i></div>
                                 <div class="ms_hr-2"></div> 
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-sm-6 col-xl-4">
+                    <div class="col-12 col-sm-6 col-xl-4 mb-3">
                         <img class="img-fluid rounded" src="./img/cabin.png" alt="casa">
                     </div>
-                    <div class="col-12 col-sm-6 col-xl-4">
+                    <div class="col-12 col-sm-6 col-xl-4 mb-3">
                         <img class="img-fluid rounded" src="./img/cake.png" alt="dolce">
                     </div>
-                    <div class="col-12 col-sm-6 col-xl-4">
+                    <div class="col-12 col-sm-6 col-xl-4 mb-3">
                         <img class="img-fluid rounded" src="./img/circus.png" alt="circo">
                     </div>
-                    <div class="col-12 col-sm-6 col-xl-4">
+                    <div class="col-12 col-sm-6 col-xl-4 mb-3">
                         <img class="img-fluid rounded" src="./img/game.png" alt="joypad">
                     </div>
-                    <div class="col-12 col-sm-6 col-xl-4">
+                    <div class="col-12 col-sm-6 col-xl-4 mb-3">
                         <img class="img-fluid rounded" src="./img/safe.png" alt="cassaforte">
                     </div>
-                    <div class="col-12 col-sm-6 col-xl-4">
+                    <div class="col-12 col-sm-6 col-xl-4 mb-3">
                         <img class="img-fluid rounded" src="./img/submarine.png" alt="sottomarino">
                     </div>
                 </div>
             </div>
         </section>
-        <section class="odd_section">
-            <div class="container-lg">
-                <div class="row">
-                    <div class="col-12 d-flex justify-content-center">
+        <section class="ms_odd-section">
+            <div class="container-lg pt-5 pb-3">
+                <div class="row justify-content-center">
+                    <div class="col-12 d-flex justify-content-center mb-2">
                         <h3>ABOUT</h3>
                     </div>
-                    <div class="col-12 d-flex justify-content-center">
-                        <span>linea</span>
-                        <span>stella</span>
-                        <span>linea</span>
+                    <div class="col-5 d-flex justify-content-between align-items-center mb-3">
+                        <div class="ms_hr"></div>
+                        <div><i class="fa-solid fa-star ms_star"></i></div>
+                        <div class="ms_hr"></div> 
                     </div>
                     <div class="row justify-content-center">
-                        <div class="col-10 col-sm-6 d-flex justify-content-center">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque quibusdam laudantium harum exercitationem. Odit alias sint in qui tenetur sequi, eum assumenda dolore ex aliquid tempore quasi dolores non provident!</p>
+                        <div class="col-8 col-sm-6 d-flex justify-content-center">
+                            <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete spuorce files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy costumization.</p>
                         </div>
-                        <div class="col-10 col-sm-6 d-flex justify-content-center">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque quibusdam laudantium harum exercitationem. Odit alias sint in qui tenetur sequi, eum assumenda dolore ex aliquid tempore quasi dolores non provident!</p>
+                        <div class="col-8 col-sm-6 d-flex justify-content-center">
+                            <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this tamplate is the perfect starting point!</p>
                         </div>
-                        <div class="col-10 d-flex justify-content-center">button</div>
+                        <div class="col-10 d-flex justify-content-center mt-3 mb-2">
+                            <button type="button" class="btn btn-primary ms_button"style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">
+                                <i class="fa-solid fa-download"></i> Download
+                            </button>
+                        </div>
                     </div>
                 </div>
             </div>
         </section>
         <section>
-            <div class="container-lg">
+            <div class="container-lg mt-5">
                 <div class="row justify-content-center">
-                    <div class="col-12 d-flex justify-content-center">
-                        <h3>CONTACT ME</h3>
+                    <div class="col-12 d-flex justify-content-center mb-2">
+                        <h3 class="fw-semibold">CONTACT ME</h3>
                     </div>
-                    <div class="col-12 d-flex justify-content-center">
-                        <span>linea</span>
-                        <span>stella</span>
-                        <span>linea</span>
+                    <div class="col-5 d-flex justify-content-between align-items-center mb-2">
+                        <div class="ms_hr-2"></div>
+                        <div><i class="fa-solid fa-star ms_star"></i></div>
+                        <div class="ms_hr-2"></div> 
                     </div>
-                    <div class="col-10">Name</div>
-                    <div class="col-10">Email</div>
-                    <div class="col-10">Phone</div>
-                    <div class="col-10">Message</div>
-                    <div class="col-10">button</div>
+                    <div class="col-8 mb-3 pb-3 border-bottom">Name</div>
+                    <div class="col-8 mb-3 pb-3 border-bottom">Email Adress</div>
+                    <div class="col-8 mb-3 pb-3 border-bottom">Phone Number</div>
+                    <div class="col-8 mb-5 ">Message</div>
+                    <div class="col-8 mb-4 border-top pt-2 mt-5">
+                        <button type="button" class="btn btn-primary ms_button-send pt-2"style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">
+                            Send
+                        </button>
+                    </div>
                 </div>
             </div>
         </section>
@@ -145,30 +153,30 @@
     <!-- / main  -->
     <!-- footer  -->
     <footer>
-        <div class="container-lg footer_top">
-            <div class="row">
+        <div class="container-lg ms_footer-top">
+            <div class="row justify-content-center">
                 <div class="col-12 col-sm-4">
-                    <h5 class="text-center">Location</h5>
-                    <p class="text-center">indirizzo</p>
+                    <h5 class="text-center">LOCATION</h5>
+                    <p class="text-center">2215 John Daniel Drive Clark, MO 54243</p>
                 </div>
                 <div class="col-12 col-sm-4">
-                    <h5 class="text-center">Around the web</h5>
+                    <h5 class="text-center">AROUND THE WEB</h5>
                     <p class="text-center">
-                        <span>f</span>
-                        <span>g</span>
-                        <span>t</span>
-                        <span>in</span>
+                        <span><i class="fa-brands fa-facebook-f "></i></span>
+                        <span><i class="fa-brands fa-google-plus-g "></i></span>
+                        <span><i class="fa-brands fa-twitter "></i></span>
+                        <span><i class="fa-brands fa-linkedin-in "></i></span>
                     </p>
                 </div>
-                <div class="col-12 col-sm-4">
-                    <h5 class="text-center">about freelancer</h5>
-                    <p class="text-center">about freelancerabout freelancerabout freelancerabout freelancerabout freelancerabout freelancer</p>
+                <div class="col-10 col-sm-4">
+                    <h5 class="text-center">ABOUT FREELANCER</h5>
+                    <p class="text-center">Freelance is a free to use, open source Bootstrap theme created by <span class="ms_color-p">Start Bootstrap</span></p>
                 </div>
             </div>
         </div>
         <div class="container-lg footer_bottom d-flex align-items-center justify-content-center">
             <div>
-                <small>copyright</small>
+                <small>Copyright <i class="fa-regular fa-copyright"></i> Your Website 2019</small>
             </div>
         </div>
     </footer>
